[tool.poetry]
name = "actiapi"
version = "0.1.0"
description = "A python package for accessing ActiGraph data through the official ActiGraph API"
authors = ["ActiGraph Data Science Team <science@theactigraph.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.7"


[tool.poetry.group.dev.dependencies]
types-requests = "^2.28.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
